# Programacao_Paralela_SO

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
include/: log.h  matrix_product.h  scalar_product.h  utils.h
scripts/: benchmark.py  init.sh  mp-benchmark.py  sim-benchmark.py  sp-benchmark.py
src/: main-mp.c  main-sp.c  main.c  matrix_product.c  scalar_product.c  simulation.c  utils.c
